2009-07-31  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* NEWS: Bump for 2.2.3 release.

2009-07-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/mmcifformat.cpp: Fix PR2824247 and 2824502,
	Contributed by Raik Brinkmann.

2009-08-16  Chris Morley

	* src/dlhandler_win32.cpp(getConvDirectory):changes which should affect
	only MSVC build. Get handle of this module, not the exe file. As found by
	Noel and by Mingyue Zheng this broke the Python bindings. 
	Correct the module name (different when debugging).
	OpenBabel2.2.3b_Windows_Installer.exe has this mod.
	
	* include/openbabel/dlhandler.h: minor doc change

2009-09-30  Noel O'Boyle  <baoilleach@gmail.com>

	* src/builder.cpp: Reapplied Geoff's fix from r3028 (undone in r3251)
	to enable 0D molecules to be handled

2009-09-27  Noel O'Boyle  <baoilleach@gmail.com>

	* src/GUI/OBGUI.cpp: GUI now compiles and runs successfully on MacOSX.

2009-09-27  Noel O'Boyle  <baoilleach@gmail.com>

	* include/openbabel/graphsym.h, src/graphsym.cpp: Changed how static
	const unsigned int was defined to conform with C++ standard as it
	caused a compile error on MacOSX (see
	http://forums.macosxhints.com/showthread.php?t=91497 for details)

2009-09-25  Noel O'Boyle  <baoilleach@gmail.com>

	Fixed some errors when compiling the GUI on Mac.

2009-09-25  Noel O'Boyle  <baoilleach@gmail.com>

	Fixed some warnings when compiling with Intel Compiler. 

2009-09-22  Noel O'Boyle  <baoilleach@gmail.com>

	* include/openbabel/format.h: Added include <typeinfo>. Now OB compiles
	using Intel Compiler.

2009-09-22  Noel O'Boyle  <baoilleach@gmail.com>

	* src/GUI/babel.xpm: Applied patch from Riccardo Vianello (r_vianello
	at SF) to avoid warnings when building on Linux

2009-09-21  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/*: Copied + pasted the scripts directory from 22x as a number
	of commits were never merged.

2009-09-20  Noel O'Boyle  <baoilleach@gmail.com>
